# Afan-chat-server

./: .dockerignore  .gitignore  LICENSE  README.md  all.dot  manage.py  production.yml  pyproject.toml
.envs.template/: .local.template  .mysql.template  .production.template
.envs.template/.local/: .django.env.template
.envs.template/.production/: .django.env.template  .minIO.template
AfanChatServer/: settings.py  wsgi.py
chat/: apps.py  chat_controller.py  chat_message_resp.py  chat_room_resp.py  chat_schema.py  contact_controller.py  member_resp.py  models.py  room_member_req.py  signals.py  tasks.py  tests.py  todo_message_list.py
chat/controller/: chat_controller.py  contact_controller.py  room_controller.py
chat/management/commands/: init_keyword.py
chat/migrations/: 0001_initial.py  0002_secureinvokerecord.py  0003_sensitiveword_alter_message_type_messagemark.py  0004_remove_messagemark_status.py  0005_messagemark_status.py  0006_alter_message_content_alter_messagemark_status.py  0007_alter_groupmember_role.py
chat/msg_schema/: abs_msg_handler.py  emoji_msg_handler.py  file_msg_handler.py  image_msg_handler.py  msg_handler_factory.py  recall_msg_handler.py  sound_msg_handler.py  system_msg_handler.py  text_msg_handler.py  video_msg_handler.py
chat/utils/sensitive_word/: sensitive_word_filter.py
chat/utils/url_discover/: abstract_url_discover.py  common_url_discover.py  (+3 more)
chatai/: apps.py  gpt_api.py
config/: asgi.py  celery_app.py  routing.py  urls.py
config/settings/: base.py  local.py  production.py
contacts/: contacts_schema.py  friend_controller.py  models.py  signals.py  tests.py
contacts/migrations/: 0001_initial.py  0002_remove_userapply_user_apply_uid_b0f14c_idx_and_more.py
contacts/utils/: pagintion.py
docs/: 流程图.puml  用例图.puml  系统功能模块.puml  系统架构.puml
docs/功能/: websockt.puml  幂等.puml
management/commands/: init_data.py
mangement/commands/: init_data.py
mymiddleware/: ChannelsMiddleWare.py
oss/: file_service_module.py  oss_type.py
oss/domain/: ossreq.py  ossresp.py
oss/oss_bucket/: minio_bucket.py  oss_bucket_service.py
users/: consumers.py  models.py  signals.py  tasks.py  tests.py
users/apis/: login_api.py  login_controller.py  oss_controller.py  user_api.py  user_controller.py  user_emoji_controller.py  wx_api.py  wx_controller.py
users/exceptions/: chat.py
users/migrations/: 0001_initial.py  0002_alter_customuser_avatar_itemconfig_userbackpack_and_more.py  0003_alter_customuser_avatar_alter_itemconfig_img.py  0004_alter_customuser_last_login.py  0005_rename_item_id_userbackpack_item_and_more.py  0006_rename_item_userbackpack_items.py  0007_rename_items_userbackpack_item_and_more.py  0008_alter_customuser_backpacks.py  0009_alter_customuser_backpacks.py  0010_blacklist.py  0011_useremoji.py
users/service/: login.py
users/tests/: test_user.py
users/third_party_certifications/: wx_api.py
users/user_schema/: ipinfo_schema.py  oss_schema.py  user_emoji_schema.py  user_schema.py
users/user_tools/: afan_ninja.py  cache_lock.py  cht_jwt_uthentication.py  tools.py
utils/: log.py
(+50 files in other folders)
