[tool.poetry]
name = "afanchatserver"
version = "0.1.0"
description = "AfanChat服务端"
authors = ["flz <f2095522823@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-ninja-extra = "^0.20.2"
django-environ="^0.11.2"
setuptools = "^69.0.2"
requests = "^2.31.0"
channels = "^4.0.0"
daphne = "^4.0.0"
channels-redis = "^4.1.0"
hiredis = "^2.2.3"
xmltodict = "^0.13.0"
mysqlclient = "^2.2.1"
django-ninja-jwt = {extras = ["crypto"], version = "^5.2.10"}
ninja-schema = "^0.13.6"
celery = "^5.3.6"
django-celery-beat = "^2.5.0"
flower = "^2.0.1"
django-celery-results = "^2.5.1"
eventlet = "^0.34.2"
lxml = "^5.0.1"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
